VDR Plugin 'ttxtsubs' Revision History
--------------------------------------

2010-04-xx: Version 0.2.2
- Fixed channel retune triggering in VDR patch and updated patch to 1.7.14
  (Dropped 1.7.12 and 1.7.13 patch)

2010-03-06: Version 0.2.1
- Added Estonian translation by Arthur Konovalov (Closes #271)
- Finnish translation updated by Rolf Ahrenberg
- Trigger OSD update when an empty page is sent (making the previous subtitle
  disappear) (Closes #275)
- French translation updated by Michaël Nival (Closes #278)
- Makefile adjustments for VDR 1.7.13.
- Fixed text rendering to not cut off bottom part (Closes #276)
- Italian translation update by Diego Pierotto (Closes #283)
- Added patch for VDR 1.7.13 (Closes #284)

2010-02-27: Version 0.2.0
- Add Ukrainian translation by Yarema aka Knedlyk (Closes #130)
- Some code refactoring
- Major VDR patch update for 1.7.12 (Closes #236, References #139)) - The patch
  now covers the following changes to VDR:
   - Record teletext subtitles
   - Added setup option to enable teletext subtitle recording
   - Allow configuration of fixed teletetxt subtitle pages
   - Capture teletext subtitle pages from PMT
   - Pass teletext date ttxtsubs plugin
  Special Thx to Rolf Ahrenberg!
- Fixed replay when the current live ttxtsubs page differs from the
  one in the recording - Thx to Rolf Ahrenberg (Closes #139)
- Show colored subtitles if color information is provided e.g. for
  different speakers and dropped custom color settings (Closes #61)
- Position subtitles always centered at the bottom, independent of the
  OSD resolution and dropped custom text position settings (Closes #231)
- Render subtitles outlined (Closes #51)
- Decrypt encrypted teletext stream (Closes #241)
- Don't redisplay unchanged subtitle pages

2009-04-26: Version 0.1.0
- Updated VDR patch and plugin to VDR 1.7.6 with support for the TS recording
  format and added separate delay setting for TS recordings. Older VDR versions