@@ -4,6 +4,7 @@ VDR Plugin 'ttxtsubs' Revision History
 2010-04-xx: Version 0.2.2
 - Fixed channel retune triggering in VDR patch and updated patch to 1.7.14
   (Dropped 1.7.12 and 1.7.13 patch)
+- Got rid of the backround thread
 
 2010-03-06: Version 0.2.1
 - Added Estonian translation by Arthur Konovalov (Closes #271)
